# crawlerstack-proxypool

./: .gitignore  404.html  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: doc.yml  main.yml
config/parse_config/: index.html
docs/: design.drawio  index.md  task_config.yml  todos.md  设计.md
docs/config/: parse_config.md
docs/uml/: design.puml
search/: search_index.json
src/crawlerstack_proxypool/: __init__.py  application.py  cmdline.py  container.py  db.py  entities.py  exceptions.py  log.py  main.py  manage.py  message.py  middlewares.py  models.py  repositories.py  schema.py  server.py  service.py  signals.py  spiders.py  task.py  utils.py
src/crawlerstack_proxypool/aio_scrapy/: crawler.py  downloader.py  engine.py  middlewares.py  req_resp.py  scraper.py  settings.py  spider.py
src/crawlerstack_proxypool/alembic/: env.py
src/crawlerstack_proxypool/alembic/versions/: 3a5e3cfca71f_init_db.py  4fa3bb6f3e85_init_table.py  54a2a03ba7a8_init_db.py  97fbf53bbc03_init_table.py  cc14dfc64697_init_table.py  daec40e689ab_init_table.py
src/crawlerstack_proxypool/api/: __init__.py  exceptions.py  resources.py  response.py  services.py
src/crawlerstack_proxypool/common/: __init__.py  checker.py  extractor.py  parser.py  spider.py  validator.py
src/crawlerstack_proxypool/config/: __init__.py  settings.yml
src/crawlerstack_proxypool/core/: base.py  checkers.py  items.py  middlewares.py  parsers.py  pipelines.py  queue_name.py  schemas.py  signals.py  spiders.py
src/crawlerstack_proxypool/crawler/: __init__.py  download_handler.py  downloader.py  engine.py  parser.py  req_resp.py  scraper.py  spider.py
src/crawlerstack_proxypool/dao/: scene.py
src/crawlerstack_proxypool/repositories/: __init__.py  base.py  ip.py  proxy.py  region.py  scene.py
src/crawlerstack_proxypool/rest_api/: __init__.py  utils.py
src/crawlerstack_proxypool/rest_api/routers/: __init__.py  ip_proxy.py  scene.py
src/crawlerstack_proxypool/spiders/: __init__.py  ajax.py  general.py  gfw.py  gfw_ajax.py  scene.py
src/crawlerstack_proxypool/tasks/: __init__.py  base.py  crawlers.py  fetcher.py  manager.py  scheduler.py  seeds.py  validator.py
src/crawlerstack_proxypool/utils/: constants.py  log.py
tests/: __init__.py  conftest.py  settings.yml  test_cmdline.py  test_config.py  test_container.py  test_db.py  test_repository.py  test_services.py  test_spider.py  test_tasks.py
tests/common/: html.html  test_check.py  test_checker.py  test_extractor.py  test_validator.py
tests/core/: test_base.py  test_checkers.py  test_middlewares.py  test_parsers.py  test_pipelines.py  test_spiders.py
tests/crawler/: test_download_handler.py  test_downloader.py  test_engine.py  test_parser.py  test_reqresp.py  test_scraper.py  test_spider.py
tests/data/: proxy_div.html  proxy_table.html
tests/repository/: conftest.py  test_ip.py  test_proxy.py  test_repo.py  test_scene.py  test_scene_repo.py
tests/rest_api/: conftest.py  test_scene.py
tests/services/: conftest.py  test_fetch.py  test_fetch_spider.py  test_scene.py  test_scene_service.py  test_service.py  test_validate.py  test_validate_spider.py  test_validate_spider_service.py
tests/spiders/: test_scene.py
tests/tasks/: test_fetcher.py  test_scheduler.py  test_validtor.py
todos/: index.html
uml/: design.puml
设计/: index.html
