[tool.poetry]
name = "crawlerstack-proxypool"
version = "0.1.0"
description = "IP addresses proxy pool"
authors = ["whg517 <huagang517@126.com>"]
readme = "README.md"
repository = "https://github.com/crawlerstack/crawlerstack-proxypool"
keywords = ['proxypool']
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.11"
stevedore = "^4.1.0"
pydantic = "^1.10.2"
fastapi = "^0.85.2"
fake-useragent = "^0.1.11"
click = "^8.1.3"
aioredis = "^2.0.1"
aiosqlite = "^0.17.0"
APScheduler = "^3.9.1"
lxml = "^4.9.1"
SQLAlchemy = {extras = ["asnycio"], version = "^1.4.42"}
httpx = "^0.23.0"
aio-pydispatch = "^1.0.0"
alembic = "^1.8.1"
uvicorn = "^0.19.0"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
tox = "^3.27.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.1"
flake8 = "^5.0.4"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
#log_cli = true
#log_level = "DEBUG"
#log_cli_format = "%(asctime)s %(levelname)s %(name)s %(process)d %(thread)d %(message)s"
#log_cli_date_format = "%Y-%m-%d %H:%M:%S"
