[metadata]
name = crawlerstack_proxypool
version = attr: crawlerstack_proxypool.__version__
author = huagang
author_email = huagang517@126.com
url = https://github.com/crawlerstack/crawlerstack-proxypool
description = IP addresses proxy pool
keywords = ['proxypool']
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
python_requires > = 3.10
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    dynaconf
    aioredis
    stevedore
    pydantic
    fake_useragent

[options.entry_points]
console_scripts =
    crawlerstack-proxypool = crawlerstack_proxypool.cmdline:main

[options.packages.find]
where = src

[options.package_data]
crawlerstack_proxypool.config = settings.yml

[options.data_files]
etc/crawlerstack/proxypool = src/crawlerstack_proxypool/config/settings.yml

[flake8]
max-line-length = 150
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
